# Pynytprof

./: .gitignore  AGENTS.md  Makefile  README.md  pynytprof  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup.sh
.github/workflows/: ci.yml
docs/: AGENTS.md  ARCHITECTURE.md  CODING_STANDARD.md  FILE_FORMAT.md  TASK_LIST.md  architecture.md
scripts/: audit_skips.py  dump_hdr.py  selfcheck.sh
src/pynytprof/: __init__.py  __main__.py  _build_tag.py  _ctrace.c  _cwrite.py  _debug.py  _native.pyi  _proto.py  _pywrite.py  _tracer.c  _writer.c  _writer.py  cli.py  convert.py  encoding.py  main.py  nytp_stream.py  nytp_version.h  nytprof_tags.py  protocol.py  reader.py  tags.py  token_writer.py  tokens.py  tracer.py  verify.py  writer.py
tests/: cg_example.py  conftest.py  example_script.py  test_S_and_D_non_empty.py  test_active_py_s_and_d_present.py  test_alignment_after_p.py  test_alignment_with_outer_chunks.py  test_architecture.py  test_banner_ends_and_first_tag_is_F.py  test_banner_ends_and_first_tag_is_P.py  test_banner_exact_termination.py  test_banner_has_nv_size.py  test_banner_includes_nv_size.py  test_banner_termination_integration.py  test_callgraph.py  test_callgraph_chunk.py  test_callgraph_pyonly.py  test_cchunks.py  test_chunk_C_c.py  test_chunk_C_fourth_c.py  test_chunk_C_fourth_py.py  test_chunk_D_c.py  test_chunk_D_third_c.py  test_chunk_D_third_py.py  test_chunk_E_last_c.py  test_chunk_E_last_py.py  test_chunk_F_after_P.py  test_chunk_F_first_c.py  test_chunk_F_first_py.py  test_chunk_S_second_c.py  test_chunk_S_second_py.py  test_chunk_c.py  test_chunk_count_py.py  test_chunk_framing.py  test_chunk_layout_tag_len_payload.py  test_chunk_py.py  test_chunk_sequence_active_py.py  test_chunk_sequence_c.py  test_chunk_uniqueness.py  test_cli.py  (+97 more)
