[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynytprof"
version = "0.0.0"
description = "Line-accurate Python profiler that writes Devel::NYTProf files"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
pynytprof = "pynytprof.tracer:cli"

[tool.black]
line-length = 99

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.extension."pynytprof._cwrite"]
sources = ["src/pynytprof/_writer.c"]
