[build-system]
requires = ["setuptools>=69", "wheel>=0.43", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pynytprof"
dynamic = ["version"]
description = "Line-accurate Python profiler that writes Devel::NYTProf files"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
pynytprof = "pynytprof.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "wheel",
    "build",
    "pytest-xdist",
]

[tool.black]
line-length = 99

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pynytprof/_version.py"

